<resources>
    <string name="app_name">StarWarWiki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="image_link_prep">https://starwars-visualguide.com/assets/img/characters/"
        %1$s ".jpg</string>
    <string name="placeholder">https://screenshotlayer.com/images/assets/placeholder.png</string>
    <string name="data_base">Archive</string>
    <string name="nothing_was_found_text">Nothing was found</string>
    <string name="birth_year"><b>Birth Year:</b>\n%1$s</string>
    <string name="species"><b>Species:</b>\n%1$s</string>
    <string name="mass"><b>Mass (kg):</b>\n%1$s</string>
    <string name="homeworld"><![CDATA[<b>Homeworld:</b><br/>\n%1$s ]]></string>
    <string name="gender"><b>Gender:</b>\n%1$s</string>
    <string name="height"><b>Height (cm):</b>\n%1$s</string>
    <string name="skin_color"><b>Skin Color:</b>\n%1$s</string>
    <string name="hair_color"><b>Hair Color:</b>\n%1$s</string>
    <string name="share_pattern">Wow! Look at this amazing app that
        helps you find all the info about Star Wars characters!
        *Place for Google Play link*
        By the way this was made by Artem Bortnikov for arcsin =) </string>
    <string name="share_via">Share via</string>
    <string name="archive_zero_results_text">There is no data yet.\n
        Try to find something first.</string>
    <string name="birth_year_text_sample">Birth Year: 19BBY</string>
    <string name="height_text_sample">height: 172cm</string>
    <string name="mass_text_sample">Mass:   77kg</string>
    <string name="gender_text_sample">Gender: Male</string>
    <string name="hair_color_text_sample">Hair Color: Blond</string>
    <string name="skin_color_text_sample">Skin Color: Fair</string>
    <string name="name_text_sample">Name</string>
    <string name="character_image_description">Character_image</string>
    <string name="menu_text_communicate">Communicate</string>
    <string name="menu_text_share">Share</string>
</resources>
