<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:minWidth="500dp"
    android:minHeight="1000dp"
    android:orientation="vertical"
    android:weightSum="100">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="60">

        <Button
            android:id="@+id/fd_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />

        <ImageView
            android:id="@+id/fd_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/character_image_description" />

    </FrameLayout>

    <TextView
        android:id="@+id/fd_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="10"
        android:fontFamily="@font/star_war"
        android:gravity="center"
        android:text="@string/name_text_sample"
        android:textSize="24sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="30"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/fd_birth_year_text_view"
            style="@style/StandardTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/birth_year_text_sample"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fd_height_text_view"
            style="@style/StandardTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/height_text_sample"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/fd_birth_year_text_view"
            app:layout_constraintTop_toBottomOf="@+id/fd_birth_year_text_view" />

        <TextView
            android:id="@+id/fd_mass_text_view"
            style="@style/StandardTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/mass_text_sample"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/fd_height_text_view"
            app:layout_constraintTop_toBottomOf="@+id/fd_height_text_view" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fd_gender_text_view"
            style="@style/StandardTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/gender_text_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fd_hair_color_text_view"
            style="@style/StandardTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/hair_color_text_sample"
            app:layout_constraintEnd_toEndOf="@+id/fd_gender_text_view"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/fd_gender_text_view" />

        <TextView
            android:id="@+id/fd_skin_color_text_view"
            style="@style/StandardTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/skin_color_text_sample"
            app:layout_constraintEnd_toEndOf="@+id/fd_hair_color_text_view"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/fd_hair_color_text_view" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>